--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "cenkor": "^1.0.0",
     "face-api.js": "^0.22.2",
     "firebase": "^10.14.0",
     "path-browserify": "^1.0.1",
